feat(device) detect brand Apple models: iPhone 12 Pro Max (iPhone13,4), iPhone 12 Pro (iPhone13,3), iPhone 12 (iPhone13,2), iPhone 12 Mini (iPhone13,1)

--- a/Tests/fixtures/smartphone-19.yml
+++ b/Tests/fixtures/smartphone-19.yml
@@ -8531,3 +8531,67 @@
     model: Optimax 11
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (iPhone; CPU iPhone OS 14_2_1 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Mobile/15E148 Instagram 169.0.0.21.133 (iPhone13,4; iOS 14_2_1; it_IT; it-IT; scale=3.00; 1284x2778; 261791898)
+  os:
+    name: iOS
+    version: 14.2.1
+    platform: ""
+  client:
+    type: mobile app
+    name: Instagram App
+    version: 169.0.0.21.133
+  device:
+    type: phablet
+    brand: Apple
+    model: iPhone 12 Pro Max
+  os_family: iOS
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (iPhone; CPU iPhone OS 14_1 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Mobile/15E148 Instagram 168.0.0.24.350 (iPhone13,3; iOS 14_1; ru_RU; ru-RU; scale=3.00; 1170x2532; 260712851)
+  os:
+    name: iOS
+    version: "14.1"
+    platform: ""
+  client:
+    type: mobile app
+    name: Instagram App
+    version: 168.0.0.24.350
+  device:
+    type: phablet
+    brand: Apple
+    model: iPhone 12 Pro
+  os_family: iOS
+  browser_family: Unknown
+-
+  user_agent: 'Mozilla/5.0 (iPhone; CPU iPhone OS 14_1 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Mobile/15E148 [FBAN/FBIOS;FBDV/iPhone13,2;FBMD/iPhone;FBSN/iOS;FBSV/14.1;FBSS/3;FBID/phone;FBLC/it_IT;FBOP/5]'
+  os:
+    name: iOS
+    version: "14.1"
+    platform: ""
+  client:
+    type: mobile app
+    name: Facebook
+    version: ""
+  device:
+    type: phablet
+    brand: Apple
+    model: iPhone 12
+  os_family: iOS
+  browser_family: Unknown
+-
+  user_agent: 'Mozilla/5.0 (iPhone; CPU iPhone OS 14_1 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Mobile/15E148 [FBAN/FBIOS;FBDV/iPhone13,1;FBMD/iPhone;FBSN/iOS;FBSV/14.1;FBSS/3;FBID/phone;FBLC/pl_PL;FBOP/5]'
+  os:
+    name: iOS
+    version: "14.1"
+    platform: ""
+  client:
+    type: mobile app
+    name: Facebook
+    version: ""
+  device:
+    type: smartphone
+    brand: Apple
+    model: iPhone 12 Mini
+  os_family: iOS
+  browser_family: Unknown
