--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -596,6 +596,18 @@ Apple:
     - regex: '(?:Apple-)?iPh(?:one)?12[C,_][8]'
       model: 'iPhone SE (2020)'
       device: 'phablet'
+    - regex: '(?:Apple-)?iPh(?:one)?13[C,_][1]'
+      model: 'iPhone 12 Mini'
+      device: 'smartphone'
+    - regex: '(?:Apple-)?iPh(?:one)?13[C,_][2]'
+      model: 'iPhone 12'
+      device: 'phablet'
+    - regex: '(?:Apple-)?iPh(?:one)?13[C,_][3]'
+      model: 'iPhone 12 Pro'
+      device: 'phablet'
+    - regex: '(?:Apple-)?iPh(?:one)?13[C,_][4]'
+      model: 'iPhone 12 Pro Max'
+      device: 'phablet'
 
     # specific tablet devices
     - regex: '(?:Apple-)?iPad1[C,_]1'
