feat(device) detect new brand Black Bear models: B6 Master, B6 Note X feat(device) detect brand Elephone model: P7000

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -4549,10 +4549,11 @@ Elephone:
       model: 'P6000 01'
     - regex: 'P6000 ?Pro(?:[);/ ]|$)'
       model: 'P6000 Pro'
-    - regex: '(?:Elephone[ _])?(P[68]000|S2)(?:[);/ ]|$)'
+    - regex: '(?:Elephone[ _])?(P[768]000|S2)(?:[);/ ]|$)'
       model: '$1'
     - regex: 'Elephone[ _\-]([^/;]+)(?: Build|[;)])'
       model: '$1'
+
 # Element
 Element:
   regex: 'AFTRS'
@@ -19179,6 +19180,12 @@ Zentality:
   regex: 'C-723ULTRA(?:[);/ ]|$)'
   device: 'tablet'
   model: 'C-723 Ultra'
+
+# Black Bear
+'Black Bear':
+  regex: '(B6 Master|B6 Note X)(?:[);/ ]|$)'
+  device: 'smartphone'
+  model: '$1'
 
 # Diva
 Diva:
