--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -8,6 +8,7 @@
 # Secure Browser
 - regex: 'Secure/(?:(\d+[\.\d]+))?'
   name: 'Secure Browser'
+  version: '$1'
 
 # Navigateur Web
 - regex: 'Navigateur web/(?:(\d+[\.\d]+))?'
