--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -8,6 +8,7 @@
 # Beagle Browser
 - regex: 'BeagleBrowser/(?:(\d+[\.\d]+))?'
   name: 'Beagle Browser'
+  version: '$1'
 
 # Navigateur Web
 - regex: 'Navigateur web/(?:(\d+[\.\d]+))?'
