--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -9,6 +9,8 @@
 - regex: '(?:chimlac_browser|chimlac)/(?:(\d+[\.\d]+))'
   name: 'Chim Lạc'
   version: '$1'
+  engine:
+    default: 'Blink'
 
 # SFive (https://sfive.vn/)
 - regex: 'SFive(?:_Android)?/.+ Chrome/(\d+[\.\d]+)'
