feat(alias device) detect models for the browser: ObigoInternetBrowser feat(alias device) detect models for the browser: InettvBrowser

--- a/regexes/alias_devices.yml
+++ b/regexes/alias_devices.yml
@@ -19,3 +19,11 @@
 
 - regex: '^JUC\s?\(Linux;\s?U;\s?(?:[\d\.]+;)\s?(?:[a-z]{2}(?:[_-][a-z]{2});)\s?([^;]+);\s?\d+\*\d+;?\)\s?UCWEB'
   name: '$1'
+
+# Obigo Browser
+- regex: '^(.+)/(?:[\d\.]+).+ObigoInternetBrowser'
+  name: '$1'
+
+# InetTvBrowser
+- regex: 'InettvBrowser/(?:[\d\.]+).+\(.+\) ?(.+); CC/'
+  name: '$1'
