Improves detection for Philips TV models

--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -6588,3 +6588,39 @@
     model: Smart TV (2021)
   os_family: Unknown
   browser_family: Unknown
+- 
+  user_agent: 'Mozilla/5.0 (Linux armv7l) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/49.0.2623.112 Safari/537.36 OPR/36.0.2128.0 OMI/4.8.0.129.Driver5.9 , _TV_MT5802/018.004.007.031 (Philips, PUS6203, wireless)  CE-HTML/1.0 NETTV/4.6.0.1 SignOn/2.0 SmartTvA/5.0.0 en'
+  os:
+    name: GNU/Linux
+    version: ""
+    platform: ARM
+  client:
+    type: browser
+    name: Opera Devices
+    version: 4.8.0.129
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: Philips
+    model: PUS6203
+  os_family: GNU/Linux
+  browser_family: Opera
+- 
+  user_agent: Mozilla/5.0 (Linux armv7l) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/49.0.2623.112 Safari/537.36 OPR/36.0.2128.0 OMI/4.8.0.66.Driver2.33 , _TV_MT5800/012.002.020.001 (Philips, 43PFT5102-98, wired) CE-HTML/1.0 NETTV/4.5.0 SignOn/2.0 SmartTvA/4.0.0 en
+  os:
+    name: GNU/Linux
+    version: ""
+    platform: ARM
+  client:
+    type: browser
+    name: Opera Devices
+    version: 4.8.0.66
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: Philips
+    model: 43PFT5102-98
+  os_family: GNU/Linux
+  browser_family: Opera
