--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -11279,6 +11279,9 @@ Philips:
     - regex: 'Philips, BDP([0-9]{4})'
       model: 'Blu-ray Player (BDP$1)'
       device: 'tv'
+    - regex: 'Philips, ([a-z0-9-]+)'
+      model: '$1'
+      device: 'tv'
     - regex: '(NETTV/[0-9\.]{5})'
       model: 'NetTV Series'
       device: 'tv'
