Adds detection for Salora TV models

--- a/regexes/device/televisions.yml
+++ b/regexes/device/televisions.yml
@@ -176,6 +176,14 @@ Philips:
     - regex: 'NETTV/[0-9\.]{5}'
       model: 'NetTV Series'
 
+# Salora
+Salora:
+  regex: 'Salora'
+  device: 'tv'
+  models:
+    - regex: 'Salora; (MB[0-9]{3})'
+      model: '$1'
+
 # Samsung
 Samsung:
   regex: 'Samsung|Maple_2011'
