Adds detection for Westpoint TV models

--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -6642,3 +6642,21 @@
     model: MB211
   os_family: GNU/Linux
   browser_family: Opera
+- 
+  user_agent: Zeasn/2.0 Mozilla/5.0 (Linux;CE-HTML/1.0;U;en), Chrome/49.0.2623.87 Safari/537.36 AppleWebKit 537.36 (KHTML, like Gecko) Tbrowser/2.0, _TV_UNKONWN/V8-NT563LA-LF1V250 (WESTPOINT,TETS-4919SM,wireless)
+  os:
+    name: GNU/Linux
+    version: ""
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 49.0.2623.87
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: Westpoint
+    model: TETS-4919SM
+  os_family: GNU/Linux
+  browser_family: Chrome
