--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -18926,3 +18926,11 @@ Shtrikh-M:
   regex: '4ife (4K Smart TV Box)(?:[);/ ]|$)'
   device: 'tv'
   model: '$1'
+
+# Westpoint
+Westpoint:
+  regex: 'WESTPOINT'
+  device: 'tv'
+  models:
+    - regex: 'WESTPOINT,([a-z0-9-]+)'
+      model: '$1'
