Adds detection for Kalley TV models

--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -6660,3 +6660,21 @@
     model: TETS-4919SM
   os_family: GNU/Linux
   browser_family: Chrome
+- 
+  user_agent: Zeasn/2.0 NETTV/4.5.0 Mozilla/5.0 (Linux;CE-HTML/1.0;U;en), Chrome/42.0.2311.152 Safari/537.36 AppleWebKit 537.36 (KHTML, like Gecko) Tbrowser/2.0, _TV_nt563/V8-NT563LA-LF1V286 (KALLEY,55D1240,wireless)
+  os:
+    name: GNU/Linux
+    version: ""
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 42.0.2311.152
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: Kalley
+    model: 55D1240
+  os_family: GNU/Linux
+  browser_family: Chrome
