--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -7522,7 +7522,7 @@ Just5:
 
 # Kalley (www.kalley.com.co)
 Kalley:
-  regex: '(?:ELEMENT Q|ELEMENT_PRO_2|K-BOOK(?:8MG|73G))(?:[);/ ]|$)'
+  regex: 'KALLEY|(?:ELEMENT Q|ELEMENT_PRO_2|K-BOOK(?:8MG|73G))(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'ELEMENT Q'
@@ -7532,6 +7532,9 @@ Kalley:
     - regex: 'K-BOOK(8MG|73G)'
       device: 'tablet'
       model: 'K-BOOK$1'
+    - regex: 'KALLEY,([a-z0-9-]+)'
+      device: 'tv'
+      model: '$1'
 
 # Kaan
 Kaan:
